Add header/hero styles and update hero text
Introduce brand color variables and comprehensive header/navigation styling in CSS (sticky header, logo, nav links, theme toggle, mobile menu button) and add hero section enhancements (gradient headline, subtitle styling, current-position badge). Also update index.html hero subtitle to include "Websites and Android Applications". These changes improve visual branding and navigation polish for the site.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
 
             <p class="hero-subtitle">
-                Diploma in IT Systems Development (2026) | I build and maintain robust IT systems and applications.
+                Diploma in IT Systems Development (2026) | I build and maintain robust IT systems, Websites and Android Applications.
             </p>
 
             <div class="cta-buttons">
